--- a/pages/web1.html
+++ b/pages/web1.html
@@ -41,8 +41,29 @@
                         <h4>Here you can find delecious foods</h4>
                         <h2>Asian Restaurant</h2>
                         <p>Quisque nec nibh id lacus fringilla eleifend sed sit amet sem. Donec lectus odio, mollis a nisl non, tempor interdum nisl.</p>
+                        <div class="primary-btn">
+                          <a href="#">ORDER RIGHT NOW</a>
+                        </div>
                     </div>
               </div>
+              <div class="row">
+                <div class="col-lg-12 second">
+                  <img width="300" class="cook1" src="../images/cook_01.jpg" alt="cook1">
+                  <div class="we">
+                    <h5>WE COOK DELECIOUS</h5>
+                    <div class="call">
+                      <p>YOU CAN CALL US ON:</p>
+                      <h5>+ 1234 567 8910</h5>
+                    </div>
+                      <h6>OR</h6>
+                      <div class="secondary-btn">
+                        <a href="#">ORDER NOW</a>
+                      </div>
+                      </div>
+                  <img width="300" class="cook2" src="../images/cook_02.jpg" alt="cook2">
+                </div>
+              </div>
+
             
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
