--- a/pages/web1.html
+++ b/pages/web1.html
@@ -48,22 +48,115 @@
               </div>
               <div class="row">
                 <div class="col-lg-12 second">
-                  <img width="300" class="cook1" src="../images/cook_01.jpg" alt="cook1">
-                  <div class="we">
-                    <h5>WE COOK DELECIOUS</h5>
-                    <div class="call">
-                      <p>YOU CAN CALL US ON:</p>
-                      <h5>+ 1234 567 8910</h5>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      <img width="300" class="cook1" src="../images/cook_01.jpg" alt="cook1">
                     </div>
-                      <h6>OR</h6>
-                      <div class="secondary-btn">
-                        <a href="#">ORDER NOW</a>
-                      </div>
-                      </div>
-                  <img width="300" class="cook2" src="../images/cook_02.jpg" alt="cook2">
+                    <div class="col-lg-4">
+                      <div class="we">
+                        <h5>WE COOK DELECIOUS</h5>
+                        <div class="call">
+                          <p>YOU CAN CALL US ON:</p>
+                          <h5>+ 1234 567 8910</h5>
+                        </div>
+                          <h6>OR</h6>
+                          <div class="secondary-btn">
+                            <a href="#">ORDER NOW</a>
+                          </div>
+                          </div>
+                    </div>
+                    <div class="col-lg-4">
+                      <img width="300" class="cook2" src="../images/cook_02.jpg" alt="cook2">
+                    </div>
+                  </div>
+                </div>
+              <div class="row eeee">
+                <div class="col-lg-3">
+                  <img src="../images/cook_breakfast.png" class="rounded-circle shadow-4-strong" alt="Cinque Terre" width="200" height="200"><br><br>
+                  <p><b>Breakfast</b></p>
+                </div>
+                <div class="col-lg-3">
+                  <img src="../images/cook_lunch.png" class="rounded-circle shadow-4-strong" alt="Cinque Terre" width="200" height="200"><br><br>
+                  <p><b>Lunch</b></p>
+                </div>
+                <div class="col-lg-3">
+                  <img src="../images/cook_dinner.png" class="rounded-circle shadow-4-strong" alt="Cinque Terre" width="200" height="200"><br><br>
+                  <p><b>Dinner</b></p>
+                </div>
+                <div class="col-lg-3">
+                  <img src="../images/cook_dessert.png" class="rounded-circle shadow-4-strong" alt="Cinque Terre" width="200" height="200"><br><br>
+                  <p><b>Dessert</b></p>
                 </div>
               </div>
-
+              </div>
+              <div class="row third">
+                <div class="col-lg-12">
+                  <h2>BOOK YOUR TABLE NOW</h2>
+                  <div class="row">
+                    <div class="col-lg-6">
+                    <img src="../images/book_left_image.jpg" alt="bookleft">
+                    </div>
+                    <div class="col-lg-6 col-sm-12">
+                   <form action="submit" method="get">
+                    <h4>Reservation</h4>
+                    <div class="row">
+                      <div class="col-lg-6 col-sm-12 day">
+                       <select name="day" id="form">
+                        <option value="">Select day</option>
+                        <option value="sunday">Sunday</option>
+                        <option value="monday">Monday</option>                         
+                          <option value="Tuesday">Tuesday</option>
+                          <option value="Wednesday">Wednesday</option>
+                          <option value="Thursday">Thursday</option>
+                          <option value="Friday">Friday</option>
+                          <option value="Saturday">Saturday</option>
+                      </select>
+                      </div>
+                      <div class="col-lg-6 col-sm-12 hour">
+                        <select name="hour">
+                          <option value="">Select hour</option>
+                          <option value="10-00">10:00</option>
+                          <option value="12-00">12:00</option>
+                          <option value="14-00">14:00</option>
+                          <option value="16-00">16:00</option>
+                          <option value="18-00">18:00</option>
+                          <option value="20-00">20:00</option>
+                          <option value="22-00">22:00</option>
+                      </select>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-6 col-sm-12 name">
+                        <input  type="name" id="name" placeholder="Full name" required="">
+                      </div> 
+                      <div class="col-lg-6 col-sm-12 number">
+                        <input  type="phone" id="number" placeholder="Phone Number" required="">
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-6 col-sm-12 persons">
+                        <select name="persons">
+                          <option value="">How many persons?</option>
+                          <option value="1-Person">1 Person</option>
+                          <option value="2-Persons">2 Persons</option>
+                          <option value="3-Persons">3 Persons</option>
+                          <option value="4-Persons">4 Persons</option>
+                          <option value="5-Persons">5 Persons</option>
+                          <option value="6-Persons">6 Persons</option>
+                          <option value="7-Persons">7 Persons</option>
+                      </select>
+                      </div>
+                      <div class="col-lg-6 col-sm-12 bookbtn">
+                        <div class="primary-btn">
+                          <a href="#">BOOK NOW</a>
+                        </div>
+                      </div>
+                    </div>
+                   </form>
+                    </div>
+                  </div>
+                </div>
+              </div>
             
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
