--- a/pages/web1.html
+++ b/pages/web1.html
@@ -127,10 +127,10 @@
                     </div>
                     <div class="row">
                       <div class="col-lg-6 col-sm-12 name">
-                        <input  type="name" id="name" placeholder="Full name" required="">
+                        <input  type="name" id="name" class="form-control" placeholder="Full name" required="">
                       </div> 
                       <div class="col-lg-6 col-sm-12 number">
-                        <input  type="phone" id="number" placeholder="Phone Number" required="">
+                        <input  type="phone" id="number" class="form-control" placeholder="Phone Number" required="">
                       </div>
                     </div>
                     <div class="row">
@@ -146,7 +146,7 @@
                           <option value="7-Persons">7 Persons</option>
                       </select>
                       </div>
-                      <div class="col-lg-6 col-sm-12 bookbtn">
+                      <div class="col-lg-6 col-sm-12 bookbtn mt-2">
                         <div class="primary-btn">
                           <a href="#">BOOK NOW</a>
                         </div>
@@ -154,6 +154,14 @@
                     </div>
                    </form>
                     </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-12 DOWNLOAD">
+                 <h4>GET APPLICATION FOR YOUR PHONE</h4>
+                  <div class="third-btn">
+                    <a href="#">DOWNLOAD NOW</a>
                   </div>
                 </div>
               </div>
