--- a/pages/web1.html
+++ b/pages/web1.html
@@ -165,6 +165,54 @@
                   </div>
                 </div>
               </div>
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="row">
+                    <div class="col-lg-12 breakfast">
+                      <h4>WEEKLY FEATURED FOOD</h4>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4 card1">
+                      <h4>Breakfast <hr></h4>
+                     <div class="card">
+                      <img src="../images/breakfast_item.jpg" alt="item1">
+                      <div class="price">$4.50</div>
+                      <div class="card-title mt-4"><h6>Kale Chips Art Party</h6></div>
+                      <div class="card-body"><p>Dreamcatcher squid ennui cliche chicharros nes echo small batch jean shorts hexagon street art knausgaard wolf...</p></div>
+                     </div>
+                    </div>
+                    <div class="col-lg-4 card2">
+                      <h4>Lunch <hr></h4>
+                      <div class="card">
+                       <img src="../images/lunch_item.jpg" alt="item2">
+                       <div class="price">$7.50</div>
+                       <div class="card-title mt-4"><h6>Taiyaki Gastro Tousled</h6></div>
+                       <div class="card-body"><p>Dreamcatcher squid ennui cliche chicharros nes echo small batch jean shorts hexagon street art knausgaard wolf...</p></div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 card3">
+                      <h4>Dinner<hr></h4>
+                      <div class="card">
+                       <img src="../images/dinner_item.jpg" alt="item3">
+                       <div class="price">$9.50</div>
+                       <div class="card-title mt-4"><h6>Batch Squid Jean Shorts</h6></div>
+                       <div class="card-body"><p>Dreamcatcher squid ennui cliche chicharros nes echo small batch jean shorts hexagon street art knausgaard wolf...</p></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-12 blog">
+                  <h4>OUR BLOG POST</h4>
+                  <div class="row">
+                    <div class="col-lg-6">
+                      
+                    </div>
+                  </div>
+                </div>
+              </div>
             
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
