--- a/pages/web1.html
+++ b/pages/web1.html
@@ -208,9 +208,64 @@
                   <h4>OUR BLOG POST</h4>
                   <div class="row">
                     <div class="col-lg-6">
-                      
+                        <div class="row content">
+                          <div class="col-lg-5">
+                            <div class="date"><p>25 Oct 2023</p></div>
+                           <img src="../images/blog_post_01.jpg" alt="blog1">
+                          </div>
+                          <div class="col-lg-7 blog2">
+                            <h5>Stumptown Tofu Schlitz</h5>
+                            <small class="text-muted"><h6>Branding / Admin</h6></small>
+                            <small class="text-muted"><p>Skateboard iceland twee tofu shaman crucifix vice before they sold out corn hole occupy drinking vinegar chambra meggings kale chips hexagon...</p></small>
+                              <a href="#">CONTINUE READING</a>
+                          </div>
+                        </div>             
+                    </div>
+                    <div class="col-lg-6">  
+                        <div class="row content2">
+                          <div class="col-lg-5">
+                            <div class="date2"><p>25 Oct 2023</p></div>
+                           <img src="../images/blog_post_02.jpg" alt="blog1">
+                          </div>
+                          <div class="col-lg-7 blog3">
+                            <h5>Succulents Hashtag Folk</h5>
+                            <small class="text-muted"> <h6>Branding / Admin</h6></small>
+                            <small class="text-muted"><p>Skateboard iceland twee tofu shaman crucifix vice before they sold out corn hole occupy drinking vinegar chambra meggings kale chips hexagon...</p></small>
+                              <a href="#">CONTINUE READING</a>
+                          </div>
+                        </div>                    
                     </div>
                   </div>
+
+                  <div class="row mt-5">
+                    <div class="col-lg-6">
+                        <div class="row content3">
+                          <div class="col-lg-5">
+                           <img src="../images/blog_post_03.jpg" alt="blog1">
+                          </div>
+                          <div class="col-lg-7 blog4">
+                            <h5>Knaus Sriracha Pinterest</h5>
+                            <small class="text-muted"><h6>Branding / Admin</h6></small>
+                            <small class="text-muted"><p>Skateboard iceland twee tofu shaman crucifix vice before they sold out corn hole occupy drinking vinegar chambra meggings kale chips hexagon...</p></small>
+                              <a href="#">CONTINUE READING</a>
+                          </div>
+                        </div>             
+                    </div>
+                    <div class="col-lg-6">  
+                        <div class="row content4">
+                          <div class="col-lg-5">
+                           <img src="../images/blog_post_04.jpg" alt="blog1">
+                          </div>
+                          <div class="col-lg-7 blog5">
+                            <h5>Crucifix Selvage Coat</h5>
+                            <small class="text-muted"> <h6>Branding / Admin</h6></small>
+                            <small class="text-muted"><p>Skateboard iceland twee tofu shaman crucifix vice before they sold out corn hole occupy drinking vinegar chambra meggings kale chips hexagon...</p></small>
+                              <a href="#">CONTINUE READING</a>
+                          </div>
+                        </div>                    
+                    </div>
+                  </div>
+
                 </div>
               </div>
             
