--- a/pages/web1.html
+++ b/pages/web1.html
@@ -224,7 +224,7 @@
                     <div class="col-lg-6">  
                         <div class="row content2">
                           <div class="col-lg-5">
-                            <div class="date2"><p>25 Oct 2023</p></div>
+                            <div class="date2"><p>25 August 2023</p></div>
                            <img src="../images/blog_post_02.jpg" alt="blog1">
                           </div>
                           <div class="col-lg-7 blog3">
@@ -266,6 +266,28 @@
                     </div>
                   </div>
 
+                </div>
+              </div>
+              <div class="row content5">
+                <div class="col-lg-12">
+                 <h5>SIGNUP FOR OUR NEWSLETTERS</h5>
+                  <input type="email"  placeholder="Enter your email here.."  required="">
+                  <button type="submit">Send Message</button>
+                </div>
+              </div>
+              <div class="row content6">
+                <div class="col-lg-4 col-sm-12">
+                <p>Copyright © 2023 Victory Template</p>
+                </div>
+                <div class="col-lg-4 col-sm-12">
+                  <ul type="none" class="icons">
+                    <li><img src="../images/icons8-facebook-70.png" alt="icon1"></li>
+                    <li><img src="../images/icons8-twitter-70.png" alt="icon2"></li>
+                    <li><img src="../images/icons8-wifi-70.png" alt="icon3"></li>
+                  </ul>
+                </div>
+                <div class="col-lg-4 col-sm-12">
+                   <p>Design: TemplateMo</p>
                 </div>
               </div>
             
