--- a/pages/web1.html
+++ b/pages/web1.html
@@ -37,7 +37,7 @@
                 </div>
               </nav>
                 <div class="row delecious">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 col-sm-12">
                         <h4>Here you can find delecious foods</h4>
                         <h2>Asian Restaurant</h2>
                         <p>Quisque nec nibh id lacus fringilla eleifend sed sit amet sem. Donec lectus odio, mollis a nisl non, tempor interdum nisl.</p>
@@ -49,10 +49,10 @@
               <div class="row">
                 <div class="col-lg-12 second">
                   <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-sm-12">
                       <img width="300" class="cook1" src="../images/cook_01.jpg" alt="cook1">
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-sm-12">
                       <div class="we">
                         <h5>WE COOK DELECIOUS</h5>
                         <div class="call">
@@ -65,7 +65,7 @@
                           </div>
                           </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-sm-12">
                       <img width="300" class="cook2" src="../images/cook_02.jpg" alt="cook2">
                     </div>
                   </div>
@@ -93,7 +93,7 @@
                 <div class="col-lg-12">
                   <h2>BOOK YOUR TABLE NOW</h2>
                   <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-sm-12">
                     <img src="../images/book_left_image.jpg" alt="bookleft">
                     </div>
                     <div class="col-lg-6 col-sm-12">
@@ -158,7 +158,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-12 DOWNLOAD">
+                <div class="col-lg-12 col-sm-12 DOWNLOAD">
                  <h4>GET APPLICATION FOR YOUR PHONE</h4>
                   <div class="third-btn">
                     <a href="#">DOWNLOAD NOW</a>
@@ -207,13 +207,13 @@
                 <div class="col-lg-12 blog">
                   <h4>OUR BLOG POST</h4>
                   <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="row content">
-                          <div class="col-lg-5">
+                          <div class="col-lg-5 col-sm-12">
                             <div class="date"><p>25 Oct 2023</p></div>
                            <img src="../images/blog_post_01.jpg" alt="blog1">
                           </div>
-                          <div class="col-lg-7 blog2">
+                          <div class="col-lg-7 col-sm-12 blog2">
                             <h5>Stumptown Tofu Schlitz</h5>
                             <small class="text-muted"><h6>Branding / Admin</h6></small>
                             <small class="text-muted"><p>Skateboard iceland twee tofu shaman crucifix vice before they sold out corn hole occupy drinking vinegar chambra meggings kale chips hexagon...</p></small>
@@ -221,13 +221,13 @@
                           </div>
                         </div>             
                     </div>
-                    <div class="col-lg-6">  
+                    <div class="col-lg-6 col-sm-12">  
                         <div class="row content2">
-                          <div class="col-lg-5">
+                          <div class="col-lg-5 col-sm-12">
                             <div class="date2"><p>25 August 2023</p></div>
                            <img src="../images/blog_post_02.jpg" alt="blog1">
                           </div>
-                          <div class="col-lg-7 blog3">
+                          <div class="col-lg-7 col-sm-12 blog3">
                             <h5>Succulents Hashtag Folk</h5>
                             <small class="text-muted"> <h6>Branding / Admin</h6></small>
                             <small class="text-muted"><p>Skateboard iceland twee tofu shaman crucifix vice before they sold out corn hole occupy drinking vinegar chambra meggings kale chips hexagon...</p></small>
@@ -238,12 +238,12 @@
                   </div>
 
                   <div class="row mt-5">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="row content3">
-                          <div class="col-lg-5">
+                          <div class="col-lg-5 col-sm-12">
                            <img src="../images/blog_post_03.jpg" alt="blog1">
                           </div>
-                          <div class="col-lg-7 blog4">
+                          <div class="col-lg-7 col-sm-12 blog4">
                             <h5>Knaus Sriracha Pinterest</h5>
                             <small class="text-muted"><h6>Branding / Admin</h6></small>
                             <small class="text-muted"><p>Skateboard iceland twee tofu shaman crucifix vice before they sold out corn hole occupy drinking vinegar chambra meggings kale chips hexagon...</p></small>
@@ -251,12 +251,12 @@
                           </div>
                         </div>             
                     </div>
-                    <div class="col-lg-6">  
+                    <div class="col-lg-6 col-sm-12">  
                         <div class="row content4">
-                          <div class="col-lg-5">
+                          <div class="col-lg-5 col-sm-12">
                            <img src="../images/blog_post_04.jpg" alt="blog1">
                           </div>
-                          <div class="col-lg-7 blog5">
+                          <div class="col-lg-7 col-sm-12 blog5">
                             <h5>Crucifix Selvage Coat</h5>
                             <small class="text-muted"> <h6>Branding / Admin</h6></small>
                             <small class="text-muted"><p>Skateboard iceland twee tofu shaman crucifix vice before they sold out corn hole occupy drinking vinegar chambra meggings kale chips hexagon...</p></small>
