--- a/pages/web1.html
+++ b/pages/web1.html
@@ -147,7 +147,7 @@
                       </select>
                       </div>
                       <div class="col-lg-6 col-sm-12 bookbtn mt-2">
-                        <div class="primary-btn">
+                        <div class="primary2-btn">
                           <a href="#">BOOK NOW</a>
                         </div>
                       </div>
@@ -269,7 +269,7 @@
                 </div>
               </div>
               <div class="row content5">
-                <div class="col-lg-12">
+                <div class="col-lg-12 col-sm-12">
                  <h5>SIGNUP FOR OUR NEWSLETTERS</h5>
                   <input type="email"  placeholder="Enter your email here.."  required="">
                   <button type="submit">Send Message</button>
